# ebc-wab

./: README.md  docker-compose.yml  pyproject.toml
coffeeShop/: .pdm-python  pyproject.toml
coffeeShop/coffeeShop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
consumer/: pyproject.toml
consumer/src/: main.py
logstash/: logstash.conf
producent/: logFileR.txt  pyproject.toml
producent/src/: main.py  rabbitmq.py
rating/: .pdm-python  pyproject.toml
rating/proto/: rating.proto
rating/rating.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rating/src/: main.py
src/: main.py  send_message.py
src/restapi/: api.py  models.py
