[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Martin Weiss", email = "xweiss3@mendelu.cz"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.2",
    "pika>=1.3.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "uvicorn src.main:app --reload"

